// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`loader test with babel-loader: generated source 1`] = `
"(()=>{"use strict";var e={d:(o,n)=>{for(var l in n)e.o(n,l)&&!e.o(o,l)&&Object.defineProperty(o,l,{enumerable:!0,get:n[l]})},o:(o,n)=>Object.prototype.hasOwnProperty.call(o,n),r:o=>{"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(o,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(o,"__esModule",{value:!0})}},l={};e.r(l),e.d(l,{constObject:()=>S,constValue1:()=>t,constValue2:()=>c,constValue3:()=>s,constValue4:()=>r,constValue5:()=>g,constValue6:()=>a,constValue7:()=>b,constValue8:()=>i,constValue9:()=>u});const t=1,c=.1,s=-1,r="foo",g=!0,a=10n,b=-10n,i="aaa\\nbbb",u=\`bbb\${n}\`;let h=!0;console.log(1,.1,-1,"foo",!0,10n,-10n,"aaa\\nbbb".toString(),u.toString(),n.toString(),!0,12345,"cccfoo",.1,h),h=!!Math.random(),h&&console.log(""),console.log(1,-1..toString(),.1.toString(),(-1).toString(),(!0).toString()),console.log(133,"5.5","5.5","5.5"),console.log(1,1===n||2===n,2,3,123);const S={a:4,b:"bar",c:!1,d:null,e:void 0,f:20n,g:-30n,h:{h1:1,h2:-3.14,h3:{}}};console.log(4,"bar",!1,null,void 0,20n,-30n,S.h,1,-3.14,S.h.h3,4..toString(),"bar".toString(),(!1).toString(),20n.toString(),-30n.toString(),1..toString(),(-3.14).toString(),4,null),console.log(o.a),console.log(o.a),console.log(o.h.h1),console.log(o.h.h1);const d={a:!1,b:2};console.log(d.a,d.b);const p={p:null,q:"q",r:{s:!1,t:2}};p.r.s=!0,console.log(p.p,"q",p.r.s,2),console.log(1,"hoge"),console.log(2,"piyo"),console.log(2,"piyo"),console.log(1);const f=Math.floor(2*Math.random())>=1?1:"hoge";function m(){return 12345}console.log(f),console.log(4),Symbol("aaa"),console.log(4),console.log(tempObjForElementAccess2[tempObjForElementAccess2[tempObjForElementAccess2[tempObjForElementAccess2.true]]]),console.log(432),(()=>{const{a:o,b:n,e=-1}=S;console.log(4,"bar",-1)})(),((o=.1)=>{console.log(o)})(),console.log(12345),console.log(m(),m()),console.log([...Array(5)].map((o,n)=>null==o?n:0)),console.log(((...o)=>o.length)(...Array(5)));const[,y]=[1,2];console.log(2);const O={foo:!0,bar:!0};console.log(O.foo,O.baz);const j={x:-1,constValue4:r,y:1,z:"hoge"};console.log(1,[1,.1],[-1,"foo"],j);const V=[1,"hoge"].includes(2);S.b,console.log([1,.1],"bar",V,"bar"),console.log(20n),console.log(4..toFixed(2));var v=exports;for(var M in l)v[M]=l[M];l.__esModule&&Object.defineProperty(v,"__esModule",{value:!0})})();
//# sourceMappingURL=index.js.map"
`;

exports[`loader test with babel-loader: generated source map 1`] = `
{
  "file": "index.js",
  "mappings": "mBACA,IAAIA,EAAsB,CCA1BA,EAAwB,CAACC,EAASC,KACjC,IAAI,IAAIC,KAAOD,EACXF,EAAoBI,EAAEF,EAAYC,KAASH,EAAoBI,EAAEH,EAASE,IAC5EE,OAAOC,eAAeL,EAASE,EAAK,CAAEI,YAAY,EAAMC,IAAKN,EAAWC,MCJ3EH,EAAwB,CAACS,EAAKC,IAAUL,OAAOM,UAAUC,eAAeC,KAAKJ,EAAKC,GCClFV,EAAyBC,IACH,oBAAXa,QAA0BA,OAAOC,aAC1CV,OAAOC,eAAeL,EAASa,OAAOC,YAAa,CAAEC,MAAO,WAE7DX,OAAOC,eAAeL,EAAS,aAAc,CAAEe,OAAO,M,qSCoBrD,EACA,IACA,EAGA,OAEA,EACA,KACA,IAEA,WAAWC,W,2BAKX,EAEY,MACZ,SAEc,G,qBAgBDC,G,+BAOZ,GAAWD,WACZ,GAAWA,aACX,GAAWA,aACX,GAAYA,Y,YASZ,IACA,MACA,MACA,O,YAIA,EACkB,I,GAA8B,IAAtBE,EAC1B,EACA,EACA,K,wCAQG,E,mBAIG,E,6BAMN,EACA,OACA,EACA,UACA,EACA,KACA,I,IAEA,GACA,K,OAGA,GAAaF,WACb,MAAaA,aACb,GAAaA,WACb,IAAaA,YACb,IAAaA,WACb,GAAgBA,aAChB,MAAgBA,WAEhB,EACA,M,+KAwCA,I,MAEA,G,YAOU,EAAW,Q,YAMX,EAAW,Q,YAEX,EAAc,Q,YAId,G,uCAG2B,EAAY,O,qDAKvC,G,0BAYV,G,qIA2BU,K,uBAGY,GAAWG,E,YACrB,EAAG,OAAI,E,SAGP,M,uLAmBF,G,6DA0BP,E,gBAEA,E,EACA,Q,YAEO,E,CAVI,EAAa,I,EACb,EAAa,OASXC,G,SAKJ,EAAqB,QAASC,SAAA,G,iBAF9B,EAAa,IACd,M,EAGiB,O,YAK5B,K,YAMO,GAGNC,QAAA,I",
  "names": [
    "__webpack_require__",
    "exports",
    "definition",
    "key",
    "o",
    "Object",
    "defineProperty",
    "enumerable",
    "get",
    "obj",
    "prop",
    "prototype",
    "hasOwnProperty",
    "call",
    "Symbol",
    "toStringTag",
    "value",
    "toString",
    "writableValue1",
    "n",
    "constObject",
    "object1",
    "includes",
    "toFixed",
  ],
  "sourceRoot": "",
  "sources": [
    "webpack://ts-const-value-transformer/webpack/bootstrap",
    "webpack://ts-const-value-transformer/webpack/runtime/define property getters",
    "webpack://ts-const-value-transformer/webpack/runtime/hasOwnProperty shorthand",
    "webpack://ts-const-value-transformer/webpack/runtime/make namespace object",
    "webpack://ts-const-value-transformer/./src/test-project/index.mts",
  ],
  "sourcesContent": [
    "// The require scope
var __webpack_require__ = {};

",
    "// define getter functions for harmony exports
__webpack_require__.d = (exports, definition) => {
	for(var key in definition) {
		if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
			Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
		}
	}
};",
    "__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))",
    "// define __esModule on exports
__webpack_require__.r = (exports) => {
	if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
		Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
	}
	Object.defineProperty(exports, '__esModule', { value: true });
};",
    "import * as ts from 'typescript';
import { versionMajorMinor as vmm } from 'typescript';
import { versionMajorMinor } from 'typescript';
import * as mod from './mod.mjs';
import { Piyo, X } from './mod.mjs';
import Foo from './mod.mjs';

const constValue1 = 1;
const constValue2 = 0.1;
const constValue3 = -1;
const constValue4 = 'foo';
const constValue5 = true;
const constValue6 = 10n;
const constValue7 = -10n;
const constValue8 = \`aaa
bbb\`;
declare let n: number;
const constValue9 = \`bbb\${n}\`;
const constValue10 = !0;
const constValue11 = undefined;
// will be replaced by actual string literal if hoistConstTemplateLiteral is true
const constValue12 = \`ccc\${constValue4}\`;
let writableValue1 = true;

console.log(
  constValue1,
  constValue2,
  constValue3,
  /* the comment */
  /* the comment */
  constValue4,
  /* the comment */
  constValue5,
  constValue6 /* the comment */,
  constValue7,
  /* the comment */
  constValue8.toString() /* the comment */,
  // don't transform because constValue9 is not a literal type
  constValue9.toString(),
  // don't transform for asserted type
  (n as 10).toString(),
  constValue10,
  // 'constValue11 || 12345' is literal type, but don't transform (instead transform 'constValue11')
  constValue11 || 12345,
  constValue12,
  // 'constValue1 ? constValue2 : constValue3' is literal type, but don't transform
  constValue1 ? constValue2 : constValue3,
  // writableValue1 is literal type, but don't transform unless \`unsafeHoistWritableValues\` is true
  writableValue1
);
export {
  constValue1,
  constValue2,
  constValue3,
  constValue4,
  constValue5,
  constValue6,
  constValue7,
  constValue8,
  constValue9,
};
setWritableValue1();
if (constValue1 && (writableValue1 || !constValue5)) {
  console.log('');
}

// Test code for print
console.log(
  -constValue3,
  -constValue1.toString(),
  constValue2.toString(),
  constValue3.toString(),
  constValue10.toString()
);

function setWritableValue1() {
  writableValue1 = !!Math.random();
}

// External values
console.log(
  ts.SyntaxKind.AnyKeyword,
  ts.versionMajorMinor,
  versionMajorMinor,
  vmm
);

console.log(
  mod.Hoge,
  (n as number) === mod.Hoge || (n as number) === mod.Piyo,
  Piyo,
  Foo,
  X
);

export const constObject = {
  a: 4,
  b: 'bar',
  c: false,
  d: null,
  e: undefined,
  f: 20n,
  g: -30n,
  h: {
    h1: constValue1,
    h2: -3.14,
    h3: {},
  },
} as const;
console.log(
  constObject.a,
  constObject.b,
  constObject.c,
  constObject.d,
  constObject.e,
  constObject.f,
  constObject.g,
  constObject.h,
  constObject.h.h1,
  constObject.h.h2,
  constObject.h.h3,
  //
  constObject.a.toString(),
  constObject.b.toString(),
  constObject.c.toString(),
  constObject.f.toString(),
  constObject.g.toString(),
  constObject.h.h1.toString(),
  constObject.h.h2.toString(),
  // element accesses are hoistable by default
  constObject['a'],
  constObject['d']
);

// don't transform here unless unsafeHoistAsExpresion is true
declare let o: object;
console.log((o as typeof constObject).a);
console.log((o as typeof constObject)['a']);
console.log((o as typeof constObject).h.h1);
console.log((o as typeof constObject).h['h1']);

const nonConstObject = {
  a: true,
  b: 1,
};
nonConstObject.a = false;
nonConstObject.b = 2;
// don't transform \`a\` unless \`unsafeHoistWritableValues\` is true
console.log(nonConstObject.a, nonConstObject.b);

interface WithReadonlyObject {
  p: number | null;
  readonly q: 'q';
  readonly r: {
    s: boolean;
    readonly t: 2;
  };
}
const partialConstObject: WithReadonlyObject = {
  p: 1,
  q: 'q',
  r: {
    s: false,
    t: 2,
  },
};
partialConstObject.p = null;
partialConstObject.r.s = true;
// don't transform \`p\` and \`r.s\` unless \`unsafeHoistWritableValues\` is true
console.log(
  partialConstObject.p,
  partialConstObject.q,
  partialConstObject.r.s,
  partialConstObject.r.t
);

const enum BarEnum {
  A = 1,
  B = 'hoge',
}
console.log(BarEnum.A, BarEnum.B);

enum BazEnum {
  C = 2,
  D = 'piyo',
}
console.log(BazEnum.C, BazEnum.D);
// element access
console.log(BazEnum['C'], BazEnum['D']);

// Type is enum literal, not actual literal type
const valueUsingEnumValue = BarEnum.A;
console.log(valueUsingEnumValue);
// Enum type (not enum literal) is not a constant
const valueTypedEnum: BarEnum =
  Math.floor(Math.random() * 2) >= 1 ? BarEnum.A : BarEnum.B;
console.log(valueTypedEnum);

// Element access with constant name
const name_a = 'a';
console.log(constObject[name_a]);
const uniqueSym = Symbol('aaa');
// Nested element access
const tempObjForElementAccess = {
  // prettier-ignore
  'o\\\\': 'a',
  [uniqueSym]: 'o\\\\',
  1: uniqueSym,
  r: 1,
} as const;
console.log(
  // prettier-ignore
  (constObject)[
    (tempObjForElementAccess)[
      (tempObjForElementAccess)[
        tempObjForElementAccess[tempObjForElementAccess.r]
      ]
    ]
  ]
);

interface TempObjForElementAccess2 {
  [\`true\`]: 1;
  1: \`'foo'\`;
  "'foo'": 'bar';
  bar: true;
}
declare const tempObjForElementAccess2: TempObjForElementAccess2;
console.log(
  // prettier-ignore
  (tempObjForElementAccess2)[
    (tempObjForElementAccess2)[
      tempObjForElementAccess2[tempObjForElementAccess2.true]
    ]
  ]
);

// Object initializer with computed name
const objWithComputedName = { [name_a]: 432 } as const;
console.log(objWithComputedName[name_a]);

(() => {
  const { a, b: b2, e = constValue3 } = constObject;
  console.log(a, b2, e);
})();

((x: number = constValue2) => {
  console.log(x);
})();

function fn2() {
  return 12345 as const;
}
console.log(fn2());
// with annotation
console.log(/*@__PURE__*/ fn2(), /*#__PURE__*/ fn2());

// don't transform spread element and parameter declarations
console.log([...Array<undefined>(5)].map((u, i) => (u == null ? i : 0)));
const fn1 = (...args: undefined[]) => args.length;
console.log(fn1(...Array<undefined>(5)));

// don't transform omitted expression
const tuple = [1, 2] as const;
const [, tuple2] = tuple;
console.log(tuple2);

// don't transform satisfies expression
tuple2 satisfies 2;
switch (tuple2) {
  case 2:
    break;
  default:
    tuple2 satisfies never;
    break;
}

// don't transform assignment
const record1: Record<string, true> = {};
record1.foo = true;
record1['bar'] = true;
// don't transform indexed access
console.log(record1.foo, record1.baz);

// do transform constant values in initializers
const value1 = constValue1;
const array1 = [constValue1, constValue2] as const;
const array2 = [constValue3, constValue4] as const satisfies ReadonlyArray<
  string | number
>;
const object1 = {
  x: constValue3,
  constValue4,
  y: mod.Hoge,
  z: BarEnum.B,
} satisfies Record<string, unknown>;
console.log(value1, array1, array2, object1);

// for \`as\` expression
const as_1 = [constValue1, constValue2] as number[]; // do transform
const as_2 = constObject.b as string; // do transform
const as_3 = [BarEnum.A as number, BarEnum.B as string].includes(2); // do transform
const as_4 = (constObject as { readonly b: 'bar' }).b; // don't transform unless unsafeHoistAsExpresion
console.log(as_1, as_2, as_3, as_4);

// for multiline expression
// e.g. \`as XXX\` requires to have an expression in the same line ('X as Y' is ok, 'X\\n as Y' is invalid)
console.log(
  constObject[
    // here
    'f'
  ] as unknown
);
function multilineTest() {
  return constObject[
    /* here */
    'a'
  ].toFixed(2);
}
console.log(multilineTest());

export {};
",
  ],
  "version": 3,
}
`;

exports[`loader test with swc-loader: generated source 1`] = `
"(()=>{"use strict";var e={d:(o,n)=>{for(var r in n)e.o(n,r)&&!e.o(o,r)&&Object.defineProperty(o,r,{enumerable:!0,get:n[r]})},o:(o,n)=>Object.prototype.hasOwnProperty.call(o,n),r:o=>{"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(o,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(o,"__esModule",{value:!0})}},r={};function t(o,n){(null==n||n>o.length)&&(n=o.length);for(var e=0,r=new Array(n);e<n;e++)r[e]=o[e];return r}function l(o,n,e){return n in o?Object.defineProperty(o,n,{value:e,enumerable:!0,configurable:!0,writable:!0}):o[n]=e,o}function a(o){return function(o){if(Array.isArray(o))return t(o)}(o)||function(o){if("undefined"!=typeof Symbol&&null!=o[Symbol.iterator]||null!=o["@@iterator"])return Array.from(o)}(o)||c(o)||function(){throw new TypeError("Invalid attempt to spread non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.")}()}function c(o,n){if(o){if("string"==typeof o)return t(o,n);var e=Object.prototype.toString.call(o).slice(8,-1);return"Object"===e&&o.constructor&&(e=o.constructor.name),"Map"===e||"Set"===e?Array.from(e):"Arguments"===e||/^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(e)?t(o,n):void 0}}e.r(r),e.d(r,{constObject:()=>p,constValue1:()=>i,constValue2:()=>s,constValue3:()=>u,constValue4:()=>g,constValue5:()=>b,constValue6:()=>f,constValue7:()=>y,constValue8:()=>d,constValue9:()=>h});var i=1,s=.1,u=-1,g="foo",b=!0,f=10n,y=-10n,d="aaa\\nbbb",h="bbb".concat(n),m=("ccc".concat(g),!0);console.log(1,.1,-1,"foo",!0,10n,-10n,"aaa\\nbbb".toString(),h.toString(),n.toString(),!0,12345,"cccfoo",.1,m),(m=!!Math.random())&&console.log(""),console.log(1,-1..toString(),.1.toString(),(-1).toString(),(!0).toString()),console.log(133,"5.5","5.5","5.5"),console.log(1,1===n||2===n,2,3,123);var p={a:4,b:"bar",c:!1,d:null,e:void 0,f:20n,g:-30n,h:{h1:1,h2:-3.14,h3:{}}};console.log(4,"bar",!1,null,void 0,20n,-30n,p.h,1,-3.14,p.h.h3,4..toString(),"bar".toString(),(!1).toString(),20n.toString(),-30n.toString(),1..toString(),(-3.14).toString(),4,null),console.log(o.a),console.log(o.a),console.log(o.h.h1),console.log(o.h.h1);var v={a:!1,b:2};console.log(v.a,v.b);var S={p:null,q:"q",r:{s:!1,t:2}};S.r.s=!0,console.log(S.p,"q",S.r.s,2),console.log(1,"hoge"),console.log(2,"piyo"),console.log(2,"piyo"),console.log(1);var A=Math.floor(2*Math.random())>=1?1:"hoge";console.log(A),console.log(4);var j,O,V=Symbol("aaa");function w(){return 12345}l(j={"o\\\\":"a"},V,"o\\\\"),l(j,1,V),l(j,"r",1),console.log(4),console.log(tempObjForElementAccess2[tempObjForElementAccess2[tempObjForElementAccess2[tempObjForElementAccess2.true]]]),l({},"a",432),console.log(432),p.a,p.b,p.e,console.log(4,"bar",-1),function(){var o=arguments.length>0&&void 0!==arguments[0]?arguments[0]:.1;console.log(o)}(),console.log(12345),console.log(w(),w()),console.log(a(Array(5)).map(function(o,n){return null==o?n:0})),console.log(function(){for(var o=arguments.length,n=new Array(o),e=0;e<o;e++)n[e]=arguments[e];return n.length}.apply(void 0,a(Array(5)))),(function(o){if(Array.isArray(o))return o}(O=[1,2])||function(o){var n=null==o?null:"undefined"!=typeof Symbol&&o[Symbol.iterator]||o["@@iterator"];if(null!=n){var e,r,t=[],l=!0,a=!1;try{for(n=n.call(o);!(l=(e=n.next()).done)&&(t.push(e.value),2!==t.length);l=!0);}catch(o){a=!0,r=o}finally{try{l||null==n.return||n.return()}finally{if(a)throw r}}return t}}(O)||c(O,2)||function(){throw new TypeError("Invalid attempt to destructure non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.")}())[1],console.log(2);var M={foo:!0,bar:!0};console.log(M.foo,M.baz);var E={x:-1,constValue4:g,y:1,z:"hoge"};console.log(1,[1,.1],[-1,"foo"],E);var P=[1,"hoge"].includes(2);p.b,console.log([1,.1],"bar",P,"bar"),console.log(20n),console.log(4..toFixed(2));var _=exports;for(var F in r)_[F]=r[F];r.__esModule&&Object.defineProperty(_,"__esModule",{value:!0})})();
//# sourceMappingURL=index.js.map"
`;

exports[`loader test with swc-loader: generated source map 1`] = `
{
  "file": "index.js",
  "mappings": "mBACA,IAAIA,EAAsB,CCA1BA,EAAwB,CAACC,EAASC,KACjC,IAAI,IAAIC,KAAOD,EACXF,EAAoBI,EAAEF,EAAYC,KAASH,EAAoBI,EAAEH,EAASE,IAC5EE,OAAOC,eAAeL,EAASE,EAAK,CAAEI,YAAY,EAAMC,IAAKN,EAAWC,MCJ3EH,EAAwB,CAACS,EAAKC,IAAUL,OAAOM,UAAUC,eAAeC,KAAKJ,EAAKC,GCClFV,EAAyBC,IACH,oBAAXa,QAA0BA,OAAOC,aAC1CV,OAAOC,eAAeL,EAASa,OAAOC,YAAa,CAAEC,MAAO,WAE7DX,OAAOC,eAAeL,EAAS,aAAc,CAAEe,OAAO,M,mqCCoBrDC,EACAC,IACAC,EAGAC,OAEAC,EACAC,KACAC,IAEAC,WAAW,W,2BAKXC,EAEY,MACZC,SAEcR,G,uDAuBbD,GAAW,WACZC,GADY,aAEZC,GAAW,aACXM,GAAY,Y,YASZE,IACAC,MACAC,MACAC,O,YAIAC,EACkBA,IADV,GACwCC,IAAtB,EAC1BC,EACAC,EACAC,K,sCAQGC,E,mBAIGnB,E,6BAMNoB,EACAC,OACAC,EACAC,UACAC,EACAC,KACAC,IAAa,IAEbC,GACAC,KAAAA,EAAAA,EAAAA,GAGAR,GAAa,WACbC,MAAa,aACbC,GAAa,WACbG,IAAa,YACbC,IAAa,WACbC,GAAgB,aAChBC,MAAgB,WAEhBC,EACAC,M,2KAwCAC,IAAoB,MAEpBC,G,YAOUC,EAAWC,Q,YAMXC,EAAWC,Q,YAEXC,EAAcC,Q,YAIdC,G,qCAG2BN,EAAYC,O,2BAKvCM,G,2GAYVC,G,8HA0B6BC,IAAM,K,YACzBC,KAGuB,Y,YACrBC,EAAGC,OAAIC,G,wEAGP7C,G,uzBAmBF8C,G,yDA0BP7C,E,gBAEAY,E,EACAoB,Q,YAEOc,E,CAVIhD,EAAaC,I,EACbC,EAAaC,OASX,G,OAKJ8B,EAAqBC,QAAS,Y,iBAF9BlC,EAAaC,IACdoB,M,EAGiB4B,O,YAK5BC,K,YAMOC,GAGN,Y",
  "names": [
    "__webpack_require__",
    "exports",
    "definition",
    "key",
    "o",
    "Object",
    "defineProperty",
    "enumerable",
    "get",
    "obj",
    "prop",
    "prototype",
    "hasOwnProperty",
    "call",
    "Symbol",
    "toStringTag",
    "value",
    "constValue1",
    "constValue2",
    "constValue3",
    "constValue4",
    "constValue5",
    "constValue6",
    "constValue7",
    "constValue8",
    "constValue10",
    "constValue12",
    "ts.SyntaxKind.AnyKeyword",
    "ts.versionMajorMinor",
    "versionMajorMinor",
    "vmm",
    "mod.Hoge",
    "mod.Piyo",
    "Piyo",
    "Foo",
    "X",
    "undefined",
    "constObject.a",
    "constObject.b",
    "constObject.c",
    "constObject.d",
    "constObject.e",
    "constObject.f",
    "constObject.g",
    "constObject.h.h1",
    "constObject.h.h2",
    "constObject['a']",
    "constObject['d']",
    "partialConstObject.q",
    "partialConstObject.r.t",
    "BarEnum.A",
    "BarEnum.B",
    "BazEnum.C",
    "BazEnum.D",
    "BazEnum['C']",
    "BazEnum['D']",
    "valueUsingEnumValue",
    "constObject[name_a]",
    "(constObject)[
    (tempObjForElementAccess)[
      (tempObjForElementAccess)[
        tempObjForElementAccess[tempObjForElementAccess.r]
      ]
    ]
  ]",
    "name_a",
    "objWithComputedName[name_a]",
    "a",
    "b2",
    "e",
    "tuple2",
    "value1",
    "as_4",
    "constObject[
    // here
    'f'
  ]",
    "constObject[
    /* here */
    'a'
  ]",
  ],
  "sourceRoot": "",
  "sources": [
    "webpack://ts-const-value-transformer/webpack/bootstrap",
    "webpack://ts-const-value-transformer/webpack/runtime/define property getters",
    "webpack://ts-const-value-transformer/webpack/runtime/hasOwnProperty shorthand",
    "webpack://ts-const-value-transformer/webpack/runtime/make namespace object",
    "webpack://ts-const-value-transformer/./src/test-project/index.mts",
  ],
  "sourcesContent": [
    "// The require scope
var __webpack_require__ = {};

",
    "// define getter functions for harmony exports
__webpack_require__.d = (exports, definition) => {
	for(var key in definition) {
		if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
			Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
		}
	}
};",
    "__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))",
    "// define __esModule on exports
__webpack_require__.r = (exports) => {
	if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
		Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
	}
	Object.defineProperty(exports, '__esModule', { value: true });
};",
    "import * as ts from 'typescript';
import { versionMajorMinor as vmm } from 'typescript';
import { versionMajorMinor } from 'typescript';
import * as mod from './mod.mjs';
import { Piyo, X } from './mod.mjs';
import Foo from './mod.mjs';

const constValue1 = 1;
const constValue2 = 0.1;
const constValue3 = -1;
const constValue4 = 'foo';
const constValue5 = true;
const constValue6 = 10n;
const constValue7 = -10n;
const constValue8 = \`aaa
bbb\`;
declare let n: number;
const constValue9 = \`bbb\${n}\`;
const constValue10 = !0;
const constValue11 = undefined;
// will be replaced by actual string literal if hoistConstTemplateLiteral is true
const constValue12 = \`ccc\${constValue4}\`;
let writableValue1 = true;

console.log(
  constValue1,
  constValue2,
  constValue3,
  /* the comment */
  /* the comment */
  constValue4,
  /* the comment */
  constValue5,
  constValue6 /* the comment */,
  constValue7,
  /* the comment */
  constValue8.toString() /* the comment */,
  // don't transform because constValue9 is not a literal type
  constValue9.toString(),
  // don't transform for asserted type
  (n as 10).toString(),
  constValue10,
  // 'constValue11 || 12345' is literal type, but don't transform (instead transform 'constValue11')
  constValue11 || 12345,
  constValue12,
  // 'constValue1 ? constValue2 : constValue3' is literal type, but don't transform
  constValue1 ? constValue2 : constValue3,
  // writableValue1 is literal type, but don't transform unless \`unsafeHoistWritableValues\` is true
  writableValue1
);
export {
  constValue1,
  constValue2,
  constValue3,
  constValue4,
  constValue5,
  constValue6,
  constValue7,
  constValue8,
  constValue9,
};
setWritableValue1();
if (constValue1 && (writableValue1 || !constValue5)) {
  console.log('');
}

// Test code for print
console.log(
  -constValue3,
  -constValue1.toString(),
  constValue2.toString(),
  constValue3.toString(),
  constValue10.toString()
);

function setWritableValue1() {
  writableValue1 = !!Math.random();
}

// External values
console.log(
  ts.SyntaxKind.AnyKeyword,
  ts.versionMajorMinor,
  versionMajorMinor,
  vmm
);

console.log(
  mod.Hoge,
  (n as number) === mod.Hoge || (n as number) === mod.Piyo,
  Piyo,
  Foo,
  X
);

export const constObject = {
  a: 4,
  b: 'bar',
  c: false,
  d: null,
  e: undefined,
  f: 20n,
  g: -30n,
  h: {
    h1: constValue1,
    h2: -3.14,
    h3: {},
  },
} as const;
console.log(
  constObject.a,
  constObject.b,
  constObject.c,
  constObject.d,
  constObject.e,
  constObject.f,
  constObject.g,
  constObject.h,
  constObject.h.h1,
  constObject.h.h2,
  constObject.h.h3,
  //
  constObject.a.toString(),
  constObject.b.toString(),
  constObject.c.toString(),
  constObject.f.toString(),
  constObject.g.toString(),
  constObject.h.h1.toString(),
  constObject.h.h2.toString(),
  // element accesses are hoistable by default
  constObject['a'],
  constObject['d']
);

// don't transform here unless unsafeHoistAsExpresion is true
declare let o: object;
console.log((o as typeof constObject).a);
console.log((o as typeof constObject)['a']);
console.log((o as typeof constObject).h.h1);
console.log((o as typeof constObject).h['h1']);

const nonConstObject = {
  a: true,
  b: 1,
};
nonConstObject.a = false;
nonConstObject.b = 2;
// don't transform \`a\` unless \`unsafeHoistWritableValues\` is true
console.log(nonConstObject.a, nonConstObject.b);

interface WithReadonlyObject {
  p: number | null;
  readonly q: 'q';
  readonly r: {
    s: boolean;
    readonly t: 2;
  };
}
const partialConstObject: WithReadonlyObject = {
  p: 1,
  q: 'q',
  r: {
    s: false,
    t: 2,
  },
};
partialConstObject.p = null;
partialConstObject.r.s = true;
// don't transform \`p\` and \`r.s\` unless \`unsafeHoistWritableValues\` is true
console.log(
  partialConstObject.p,
  partialConstObject.q,
  partialConstObject.r.s,
  partialConstObject.r.t
);

const enum BarEnum {
  A = 1,
  B = 'hoge',
}
console.log(BarEnum.A, BarEnum.B);

enum BazEnum {
  C = 2,
  D = 'piyo',
}
console.log(BazEnum.C, BazEnum.D);
// element access
console.log(BazEnum['C'], BazEnum['D']);

// Type is enum literal, not actual literal type
const valueUsingEnumValue = BarEnum.A;
console.log(valueUsingEnumValue);
// Enum type (not enum literal) is not a constant
const valueTypedEnum: BarEnum =
  Math.floor(Math.random() * 2) >= 1 ? BarEnum.A : BarEnum.B;
console.log(valueTypedEnum);

// Element access with constant name
const name_a = 'a';
console.log(constObject[name_a]);
const uniqueSym = Symbol('aaa');
// Nested element access
const tempObjForElementAccess = {
  // prettier-ignore
  'o\\\\': 'a',
  [uniqueSym]: 'o\\\\',
  1: uniqueSym,
  r: 1,
} as const;
console.log(
  // prettier-ignore
  (constObject)[
    (tempObjForElementAccess)[
      (tempObjForElementAccess)[
        tempObjForElementAccess[tempObjForElementAccess.r]
      ]
    ]
  ]
);

interface TempObjForElementAccess2 {
  [\`true\`]: 1;
  1: \`'foo'\`;
  "'foo'": 'bar';
  bar: true;
}
declare const tempObjForElementAccess2: TempObjForElementAccess2;
console.log(
  // prettier-ignore
  (tempObjForElementAccess2)[
    (tempObjForElementAccess2)[
      tempObjForElementAccess2[tempObjForElementAccess2.true]
    ]
  ]
);

// Object initializer with computed name
const objWithComputedName = { [name_a]: 432 } as const;
console.log(objWithComputedName[name_a]);

(() => {
  const { a, b: b2, e = constValue3 } = constObject;
  console.log(a, b2, e);
})();

((x: number = constValue2) => {
  console.log(x);
})();

function fn2() {
  return 12345 as const;
}
console.log(fn2());
// with annotation
console.log(/*@__PURE__*/ fn2(), /*#__PURE__*/ fn2());

// don't transform spread element and parameter declarations
console.log([...Array<undefined>(5)].map((u, i) => (u == null ? i : 0)));
const fn1 = (...args: undefined[]) => args.length;
console.log(fn1(...Array<undefined>(5)));

// don't transform omitted expression
const tuple = [1, 2] as const;
const [, tuple2] = tuple;
console.log(tuple2);

// don't transform satisfies expression
tuple2 satisfies 2;
switch (tuple2) {
  case 2:
    break;
  default:
    tuple2 satisfies never;
    break;
}

// don't transform assignment
const record1: Record<string, true> = {};
record1.foo = true;
record1['bar'] = true;
// don't transform indexed access
console.log(record1.foo, record1.baz);

// do transform constant values in initializers
const value1 = constValue1;
const array1 = [constValue1, constValue2] as const;
const array2 = [constValue3, constValue4] as const satisfies ReadonlyArray<
  string | number
>;
const object1 = {
  x: constValue3,
  constValue4,
  y: mod.Hoge,
  z: BarEnum.B,
} satisfies Record<string, unknown>;
console.log(value1, array1, array2, object1);

// for \`as\` expression
const as_1 = [constValue1, constValue2] as number[]; // do transform
const as_2 = constObject.b as string; // do transform
const as_3 = [BarEnum.A as number, BarEnum.B as string].includes(2); // do transform
const as_4 = (constObject as { readonly b: 'bar' }).b; // don't transform unless unsafeHoistAsExpresion
console.log(as_1, as_2, as_3, as_4);

// for multiline expression
// e.g. \`as XXX\` requires to have an expression in the same line ('X as Y' is ok, 'X\\n as Y' is invalid)
console.log(
  constObject[
    // here
    'f'
  ] as unknown
);
function multilineTest() {
  return constObject[
    /* here */
    'a'
  ].toFixed(2);
}
console.log(multilineTest());

export {};
",
  ],
  "version": 3,
}
`;

exports[`loader test: generated source 1`] = `
"(()=>{"use strict";var e={d:(o,n)=>{for(var l in n)e.o(n,l)&&!e.o(o,l)&&Object.defineProperty(o,l,{enumerable:!0,get:n[l]})},o:(o,n)=>Object.prototype.hasOwnProperty.call(o,n),r:o=>{"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(o,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(o,"__esModule",{value:!0})}},l={};e.r(l),e.d(l,{constObject:()=>d,constValue1:()=>t,constValue2:()=>c,constValue3:()=>s,constValue4:()=>r,constValue5:()=>g,constValue6:()=>a,constValue7:()=>b,constValue8:()=>i,constValue9:()=>u}),require(void 0);const t=1,c=.1,s=-1,r="foo",g=!0,a=10n,b=-10n,i="aaa\\nbbb",u=\`bbb\${n}\`;let h=!0;console.log(1,.1,-1,"foo",!0,10n,-10n,"aaa\\nbbb".toString(),u.toString(),n.toString(),!0,12345,"cccfoo",.1,h),h=!!Math.random(),h&&console.log(""),console.log(1,-1..toString(),.1.toString(),(-1).toString(),(!0).toString()),console.log(133,"5.5","5.5","5.5"),console.log(1,1===n||2===n,2,3,123);const d={a:4,b:"bar",c:!1,d:null,e:void 0,f:20n,g:-30n,h:{h1:1,h2:-3.14,h3:{}}};console.log(4,"bar",!1,null,void 0,20n,-30n,d.h,1,-3.14,d.h.h3,4..toString(),"bar".toString(),(!1).toString(),20n.toString(),-30n.toString(),1..toString(),(-3.14).toString(),4,null),console.log(o.a),console.log(o.a),console.log(o.h.h1),console.log(o.h.h1);const p={a:!1,b:2};console.log(p.a,p.b);const S={p:1,q:"q",r:{s:!1,t:2}};var f,y;S.p=null,S.r.s=!0,console.log(S.p,"q",S.r.s,2),function(o){o[o.A=1]="A",o.B="hoge"}(f||(f={})),console.log(1,"hoge"),function(o){o[o.C=2]="C",o.D="piyo"}(y||(y={})),console.log(2,"piyo"),console.log(2,"piyo"),console.log(1);const m=Math.floor(2*Math.random())>=1?1:"hoge";function v(){return 12345}console.log(m),console.log(4),Symbol("aaa"),console.log(4),console.log(tempObjForElementAccess2[tempObjForElementAccess2[tempObjForElementAccess2[tempObjForElementAccess2.true]]]),console.log(432),(()=>{const{a:o,b:n,e=-1}=d;console.log(4,"bar",-1)})(),((o=.1)=>{console.log(o)})(),console.log(12345),console.log(v(),v()),console.log([...Array(5)].map((o,n)=>null==o?n:0)),console.log(((...o)=>o.length)(...Array(5)));const[,O]=[1,2];console.log(2);const j={foo:!0,bar:!0};console.log(j.foo,j.baz);const V={x:-1,constValue4:r,y:1,z:"hoge"};console.log(1,[1,.1],[-1,"foo"],V);const A=[1,"hoge"].includes(2);d.b,console.log([1,.1],"bar",A,"bar"),console.log(20n),console.log(4..toFixed(2));var M=exports;for(var _ in l)M[_]=l[_];l.__esModule&&Object.defineProperty(M,"__esModule",{value:!0})})();
//# sourceMappingURL=index.js.map"
`;

exports[`loader test: generated source map 1`] = `
{
  "file": "index.js",
  "mappings": "mBACA,IAAIA,EAAsB,CCA1BA,EAAwB,CAACC,EAASC,KACjC,IAAI,IAAIC,KAAOD,EACXF,EAAoBI,EAAEF,EAAYC,KAASH,EAAoBI,EAAEH,EAASE,IAC5EE,OAAOC,eAAeL,EAASE,EAAK,CAAEI,YAAY,EAAMC,IAAKN,EAAWC,MCJ3EH,EAAwB,CAACS,EAAKC,IAAUL,OAAOM,UAAUC,eAAeC,KAAKJ,EAAKC,GCClFV,EAAyBC,IACH,oBAAXa,QAA0BA,OAAOC,aAC1CV,OAAOC,eAAeL,EAASa,OAAOC,YAAa,CAAEC,MAAO,WAE7DX,OAAOC,eAAeL,EAAS,aAAc,CAAEe,OAAO,M,yMCLlBC,aAAQC,GAA7C,MCOMC,EAAc,EACdC,EAAc,GACdC,GAAe,EACfC,EAAc,MACdC,GAAc,EACdC,EAAc,IACdC,GAAe,IACfC,EAAc,WAGdC,EAAc,MAAMC,IAK1B,IAAIC,GAAiB,EAErBC,QAAQC,ICCNZ,EACAC,IACAC,EAGAC,OAEAC,EACAC,KACAC,IAEAC,WAAYM,WDEZL,EAAYK,WAEXJ,EAASI,YCCVC,EAEgB,MAChBC,SAEcd,GDEdS,GA4BAA,IAAmBM,KAAKC,SCdNP,GDClBC,QAAQC,IAAI,IAIdD,QAAQC,IACN,GCCCZ,GAAYa,WACbZ,GAAYY,aACZX,GAAYW,aACZC,GAAaD,YDQfF,QAAQC,ICCNM,IACAC,MACAC,MACAC,ODGFV,QAAQC,ICCNU,EACkBA,IDAjBb,GCA+Cc,IAAlB,EAC9BC,EACAC,EACAC,KDGK,MAAMC,EAAc,CACzBC,EAAG,EACHC,EAAG,MACHC,GAAG,EACHC,EAAG,KACHC,OCAGjC,EDCHkC,EAAG,IACHC,GAAI,IACJC,EAAG,CACDC,GCAIpC,EDCJqC,IAAK,KACLC,GAAI,CAAC,IAGT3B,QAAQC,ICCN2B,EACAC,OACAC,EACAC,UACAC,EACAC,KACAC,IDCAlB,EAAYQ,ECCZW,GACAC,KDCApB,EAAYQ,EAAEG,GCEdC,GAAc1B,WACd2B,MAAc3B,aACd4B,GAAc5B,WACd+B,IAAc/B,YACdgC,IAAchC,WACdiC,GAAiBjC,aACjBkC,MAAiBlC,WAEjBmC,EACAC,MDKFtC,QAAQC,IAAK3B,EAAyB2C,GACtCjB,QAAQC,IAAK3B,EAA4B,GACzC0B,QAAQC,IAAK3B,EAAyBkD,EAAEC,IACxCzB,QAAQC,IAAK3B,EAAyBkD,EAAM,IAE5C,MAAMe,EAAiB,CACrBtB,GAGiB,EAFjBC,EAGiB,GAEnBlB,QAAQC,IAAIsC,EAAetB,EAAGsB,EAAerB,GAU7C,MAAMsB,EAAyC,CAC7CC,EAAG,EACHC,EAAG,IACHC,EAAG,CACDC,GAAG,EACHC,EAAG,IAaP,IAAWC,EAMNC,EAhBLP,EAAmBC,EAAI,KACvBD,EAAmBG,EAAEC,GAAI,EAEzB5C,QAAQC,IACNuC,EAAmBC,ECCnBO,IDCAR,EAAmBG,EAAEC,ECCrBK,GDGF,SAAWH,GACT,aACA,UACD,CAHD,CAAWA,IAAAA,EAAO,KAIlB9C,QAAQC,ICAIiD,EAAWC,QDEvB,SAAKJ,GACH,aACA,UACD,CAHD,CAAKA,IAAAA,EAAO,KAIZ/C,QAAQC,ICAImD,EAAWC,QDEvBrD,QAAQC,ICAIqD,EAAcC,QDI1BvD,QAAQC,ICAIuD,GDEZ,MAAMC,EACJpD,KAAKqD,MAAsB,EAAhBrD,KAAKC,WAAiB,ECAI4C,EAAYC,ODuDnD,SAASQ,IACP,OAAO,KACT,CAxDA3D,QAAQC,IAAIwD,GAIZzD,QAAQC,ICAI2D,GDCM5E,OAAO,OASzBgB,QAAQC,ICEN4D,GDgBF7D,QAAQC,IAEN,yBACE,yBACE6D,yBAAyBA,yBAAyBC,SAOxD/D,QAAQC,ICAI+D,KDEZ,MACE,MAAM,EAAE/C,EAAGC,EAAG+C,EAAE,GCAM1E,GAAgByB,EDCtChB,QAAQC,ICAIgB,EAAGgD,OAAI5C,EDCpB,EAHD,GAKA,EAAE6C,ECAY5E,MDCZU,QAAQC,IAAIiE,EACb,EAFD,GAOAlE,QAAQC,IAFC,OAITD,QAAQC,IAAkB0D,IAAqBA,KAG/C3D,QAAQC,IAAI,IAAIkE,MAAiB,IAAIC,IAAI,CAACC,EAAGC,IAAY,MAALD,EAAYC,EAAI,IAEpEtE,QAAQC,IADI,KAAIsE,IAAsBA,EAAKC,OAC/BC,IAAON,MAAiB,KAGpC,MACO,CAAEO,GADK,CAAC,EAAG,GAElB1E,QAAQC,ICAIyE,GDaZ,MAAMC,EAAgC,CACtCA,KAAc,EACdA,KAAiB,GAEjB3E,QAAQC,IAAI0E,EAAQC,IAAKD,EAAQE,KAGjC,MAKMC,EAAU,CACdZ,GCAG3E,EDCHC,cACAuF,ECAGpE,EDCHqE,ECAG7B,QDELnD,QAAQC,ICAIgF,EDVG,CCAC5F,EAAaC,IDCd,ECACC,EAAaC,OASOsF,GDGpC,MAEMI,EAAO,CCAChC,EAAqBC,QAAS,YDC9BnC,EAAsCE,EACpDlB,QAAQC,IAJK,CCACZ,EAAaC,IACduC,MDGWqD,ECAMC,ODI9BnF,QAAQC,ICCNmF,KDWFpF,QAAQC,ICLCoF,GAGN,Y",
  "names": [
    "__webpack_require__",
    "exports",
    "definition",
    "key",
    "o",
    "Object",
    "defineProperty",
    "enumerable",
    "get",
    "obj",
    "prop",
    "prototype",
    "hasOwnProperty",
    "call",
    "Symbol",
    "toStringTag",
    "value",
    "require",
    "undefined",
    "constValue1",
    "constValue2",
    "constValue3",
    "constValue4",
    "constValue5",
    "constValue6",
    "constValue7",
    "constValue8",
    "constValue9",
    "n",
    "writableValue1",
    "console",
    "log",
    "toString",
    "constValue10",
    "constValue12",
    "Math",
    "random",
    "ts.SyntaxKind.AnyKeyword",
    "ts.versionMajorMinor",
    "versionMajorMinor",
    "vmm",
    "mod.Hoge",
    "mod.Piyo",
    "Piyo",
    "Foo",
    "X",
    "constObject",
    "a",
    "b",
    "c",
    "d",
    "e",
    "f",
    "g",
    "h",
    "h1",
    "h2",
    "h3",
    "constObject.a",
    "constObject.b",
    "constObject.c",
    "constObject.d",
    "constObject.e",
    "constObject.f",
    "constObject.g",
    "constObject.h.h1",
    "constObject.h.h2",
    "constObject['a']",
    "constObject['d']",
    "nonConstObject",
    "partialConstObject",
    "p",
    "q",
    "r",
    "s",
    "t",
    "BarEnum",
    "BazEnum",
    "partialConstObject.q",
    "partialConstObject.r.t",
    "BarEnum.A",
    "BarEnum.B",
    "BazEnum.C",
    "BazEnum.D",
    "BazEnum['C']",
    "BazEnum['D']",
    "valueUsingEnumValue",
    "valueTypedEnum",
    "floor",
    "fn2",
    "constObject[name_a]",
    "(constObject)[
    (tempObjForElementAccess)[
      (tempObjForElementAccess)[
        tempObjForElementAccess[tempObjForElementAccess.r]
      ]
    ]
  ]",
    "tempObjForElementAccess2",
    "true",
    "objWithComputedName[name_a]",
    "b2",
    "x",
    "Array",
    "map",
    "u",
    "i",
    "args",
    "length",
    "fn1",
    "tuple2",
    "record1",
    "foo",
    "baz",
    "object1",
    "y",
    "z",
    "value1",
    "as_3",
    "as_4",
    "constObject[
    // here
    'f'
  ]",
    "constObject[
    /* here */
    'a'
  ]",
  ],
  "sourceRoot": "",
  "sources": [
    "webpack://ts-const-value-transformer/webpack/bootstrap",
    "webpack://ts-const-value-transformer/webpack/runtime/define property getters",
    "webpack://ts-const-value-transformer/webpack/runtime/hasOwnProperty shorthand",
    "webpack://ts-const-value-transformer/webpack/runtime/make namespace object",
    "webpack://ts-const-value-transformer/external commonjs {"root":"typescript"}",
    "webpack://ts-const-value-transformer/./src/test-project/index.mts?0ff5",
    "webpack://ts-const-value-transformer/./src/test-project/index.mts",
  ],
  "sourcesContent": [
    "// The require scope
var __webpack_require__ = {};

",
    "// define getter functions for harmony exports
__webpack_require__.d = (exports, definition) => {
	for(var key in definition) {
		if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
			Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
		}
	}
};",
    "__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))",
    "// define __esModule on exports
__webpack_require__.r = (exports) => {
	if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
		Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
	}
	Object.defineProperty(exports, '__esModule', { value: true });
};",
    "const __WEBPACK_NAMESPACE_OBJECT__ = require(undefined);",
    "import * as ts from 'typescript';
import { versionMajorMinor as vmm } from 'typescript';
import { versionMajorMinor } from 'typescript';
import * as mod from './mod.mjs';
import { Piyo, X } from './mod.mjs';
import Foo from './mod.mjs';

const constValue1 = 1;
const constValue2 = 0.1;
const constValue3 = -1;
const constValue4 = 'foo';
const constValue5 = true;
const constValue6 = 10n;
const constValue7 = -10n;
const constValue8 = \`aaa
bbb\`;
declare let n: number;
const constValue9 = \`bbb\${n}\`;
const constValue10 = !0;
const constValue11 = (void 0) /* undefined */;
// will be replaced by actual string literal if hoistConstTemplateLiteral is true
const constValue12 = \`ccc\${constValue4}\`;
let writableValue1 = true;

console.log(
  1 /* constValue1 */,
  0.1 /* constValue2 */,
  (-1) /* constValue3 */,
  /* the comment */
  /* the comment */
  "foo" /* constValue4 */,
  /* the comment */
  true /* constValue5 */,
  10n /* constValue6 */ /* the comment */,
  -10n /* constValue7 */,
  /* the comment */
  "aaa\\nbbb" /* constValue8 */.toString() /* the comment */,
  // don't transform because constValue9 is not a literal type
  constValue9.toString(),
  // don't transform for asserted type
  (n as 10).toString(),
  true /* constValue10 */,
  // 'constValue11 || 12345' is literal type, but don't transform (instead transform 'constValue11')
  (void 0) /* constValue11 */ || 12345,
  "cccfoo" /* constValue12 */,
  // 'constValue1 ? constValue2 : constValue3' is literal type, but don't transform
  1 /* constValue1 */ ? 0.1 /* constValue2 */ : (-1) /* constValue3 */,
  // writableValue1 is literal type, but don't transform unless \`unsafeHoistWritableValues\` is true
  writableValue1
);
export {
  constValue1,
  constValue2,
  constValue3,
  constValue4,
  constValue5,
  constValue6,
  constValue7,
  constValue8,
  constValue9,
};
setWritableValue1();
if (1 /* constValue1 */ && (writableValue1 || !true /* constValue5 */)) {
  console.log('');
}

// Test code for print
console.log(
  -(-1) /* constValue3 */,
  -1 /* constValue1 */.toString(),
  0.1 /* constValue2 */.toString(),
  (-1) /* constValue3 */.toString(),
  true /* constValue10 */.toString()
);

function setWritableValue1() {
  writableValue1 = !!Math.random();
}

// External values
console.log(
  133 /* ts.SyntaxKind.AnyKeyword */,
  "5.5" /* ts.versionMajorMinor */,
  "5.5" /* versionMajorMinor */,
  "5.5" /* vmm */
);

console.log(
  1 /* mod.Hoge */,
  (n as number) === 1 /* mod.Hoge */ || (n as number) === 2 /* mod.Piyo */,
  2 /* Piyo */,
  3 /* Foo */,
  123 /* X */
);

export const constObject = {
  a: 4,
  b: 'bar',
  c: false,
  d: null,
  e: (void 0) /* undefined */,
  f: 20n,
  g: -30n,
  h: {
    h1: 1 /* constValue1 */,
    h2: -3.14,
    h3: {},
  },
} as const;
console.log(
  4 /* constObject.a */,
  "bar" /* constObject.b */,
  false /* constObject.c */,
  null /* constObject.d */,
  (void 0) /* constObject.e */,
  20n /* constObject.f */,
  -30n /* constObject.g */,
  constObject.h,
  1 /* constObject.h.h1 */,
  (-3.14) /* constObject.h.h2 */,
  constObject.h.h3,
  //
  4 /* constObject.a */.toString(),
  "bar" /* constObject.b */.toString(),
  false /* constObject.c */.toString(),
  20n /* constObject.f */.toString(),
  -30n /* constObject.g */.toString(),
  1 /* constObject.h.h1 */.toString(),
  (-3.14) /* constObject.h.h2 */.toString(),
  // element accesses are hoistable by default
  4 /* constObject['a'] */,
  null /* constObject['d'] */
);

// don't transform here unless unsafeHoistAsExpresion is true
declare let o: object;
console.log((o as typeof constObject).a);
console.log((o as typeof constObject)['a']);
console.log((o as typeof constObject).h.h1);
console.log((o as typeof constObject).h['h1']);

const nonConstObject = {
  a: true,
  b: 1,
};
nonConstObject.a = false;
nonConstObject.b = 2;
// don't transform \`a\` unless \`unsafeHoistWritableValues\` is true
console.log(nonConstObject.a, nonConstObject.b);

interface WithReadonlyObject {
  p: number | null;
  readonly q: 'q';
  readonly r: {
    s: boolean;
    readonly t: 2;
  };
}
const partialConstObject: WithReadonlyObject = {
  p: 1,
  q: 'q',
  r: {
    s: false,
    t: 2,
  },
};
partialConstObject.p = null;
partialConstObject.r.s = true;
// don't transform \`p\` and \`r.s\` unless \`unsafeHoistWritableValues\` is true
console.log(
  partialConstObject.p,
  "q" /* partialConstObject.q */,
  partialConstObject.r.s,
  2 /* partialConstObject.r.t */
);

const enum BarEnum {
  A = 1,
  B = 'hoge',
}
console.log(1 /* BarEnum.A */, "hoge" /* BarEnum.B */);

enum BazEnum {
  C = 2,
  D = 'piyo',
}
console.log(2 /* BazEnum.C */, "piyo" /* BazEnum.D */);
// element access
console.log(2 /* BazEnum['C'] */, "piyo" /* BazEnum['D'] */);

// Type is enum literal, not actual literal type
const valueUsingEnumValue = 1 /* BarEnum.A */;
console.log(1 /* valueUsingEnumValue */);
// Enum type (not enum literal) is not a constant
const valueTypedEnum: BarEnum =
  Math.floor(Math.random() * 2) >= 1 ? 1 /* BarEnum.A */ : "hoge" /* BarEnum.B */;
console.log(valueTypedEnum);

// Element access with constant name
const name_a = 'a';
console.log(4 /* constObject[name_a] */);
const uniqueSym = Symbol('aaa');
// Nested element access
const tempObjForElementAccess = {
  // prettier-ignore
  'o\\\\': 'a',
  [uniqueSym]: 'o\\\\',
  1: uniqueSym,
  r: 1,
} as const;
console.log(
  // prettier-ignore
  (4 /* (constObject)[
    (tempObjForElementAccess)[
      (tempObjForElementAccess)[
        tempObjForElementAccess[tempObjForElementAccess.r]
      ]
    ]
  ] */)
);

interface TempObjForElementAccess2 {
  [\`true\`]: 1;
  1: \`'foo'\`;
  "'foo'": 'bar';
  bar: true;
}
declare const tempObjForElementAccess2: TempObjForElementAccess2;
console.log(
  // prettier-ignore
  (tempObjForElementAccess2)[
    (tempObjForElementAccess2)[
      tempObjForElementAccess2[tempObjForElementAccess2.true]
    ]
  ]
);

// Object initializer with computed name
const objWithComputedName = { ["a" /* name_a */]: 432 } as const;
console.log(432 /* objWithComputedName[name_a] */);

(() => {
  const { a, b: b2, e = (-1) /* constValue3 */ } = constObject;
  console.log(4 /* a */, "bar" /* b2 */, (-1) /* e */);
})();

((x: number = 0.1 /* constValue2 */) => {
  console.log(x);
})();

function fn2() {
  return 12345 as const;
}
console.log(fn2());
// with annotation
console.log(/*@__PURE__*/ fn2(), /*#__PURE__*/ fn2());

// don't transform spread element and parameter declarations
console.log([...Array<undefined>(5)].map((u, i) => (u == null ? i : 0)));
const fn1 = (...args: undefined[]) => args.length;
console.log(fn1(...Array<undefined>(5)));

// don't transform omitted expression
const tuple = [1, 2] as const;
const [, tuple2] = tuple;
console.log(2 /* tuple2 */);

// don't transform satisfies expression
2 /* tuple2 */ satisfies 2;
switch (tuple2) {
  case 2:
    break;
  default:
    tuple2 satisfies never;
    break;
}

// don't transform assignment
const record1: Record<string, true> = {};
record1.foo = true;
record1['bar'] = true;
// don't transform indexed access
console.log(record1.foo, record1.baz);

// do transform constant values in initializers
const value1 = 1 /* constValue1 */;
const array1 = [1 /* constValue1 */, 0.1 /* constValue2 */] as const;
const array2 = [(-1) /* constValue3 */, "foo" /* constValue4 */] as const satisfies ReadonlyArray<
  string | number
>;
const object1 = {
  x: (-1) /* constValue3 */,
  constValue4,
  y: 1 /* mod.Hoge */,
  z: "hoge" /* BarEnum.B */,
} satisfies Record<string, unknown>;
console.log(1 /* value1 */, array1, array2, object1);

// for \`as\` expression
const as_1 = [1 /* constValue1 */, 0.1 /* constValue2 */] as number[]; // do transform
const as_2 = "bar" /* constObject.b */ as string; // do transform
const as_3 = [1 /* BarEnum.A */ as number, "hoge" /* BarEnum.B */ as string].includes(2); // do transform
const as_4 = (constObject as { readonly b: 'bar' }).b; // don't transform unless unsafeHoistAsExpresion
console.log(as_1, as_2, as_3, "bar" /* as_4 */);

// for multiline expression
// e.g. \`as XXX\` requires to have an expression in the same line ('X as Y' is ok, 'X\\n as Y' is invalid)
console.log(
  (20n /* constObject[
    // here
    'f'
  ] */) as unknown
);
function multilineTest() {
  return (4 /* constObject[
     * here * 
    'a'
  ] */).toFixed(2);
}
console.log(multilineTest());

export {};
",
    "import * as ts from 'typescript';
import { versionMajorMinor as vmm } from 'typescript';
import { versionMajorMinor } from 'typescript';
import * as mod from './mod.mjs';
import { Piyo, X } from './mod.mjs';
import Foo from './mod.mjs';

const constValue1 = 1;
const constValue2 = 0.1;
const constValue3 = -1;
const constValue4 = 'foo';
const constValue5 = true;
const constValue6 = 10n;
const constValue7 = -10n;
const constValue8 = \`aaa
bbb\`;
declare let n: number;
const constValue9 = \`bbb\${n}\`;
const constValue10 = !0;
const constValue11 = undefined;
// will be replaced by actual string literal if hoistConstTemplateLiteral is true
const constValue12 = \`ccc\${constValue4}\`;
let writableValue1 = true;

console.log(
  constValue1,
  constValue2,
  constValue3,
  /* the comment */
  /* the comment */
  constValue4,
  /* the comment */
  constValue5,
  constValue6 /* the comment */,
  constValue7,
  /* the comment */
  constValue8.toString() /* the comment */,
  // don't transform because constValue9 is not a literal type
  constValue9.toString(),
  // don't transform for asserted type
  (n as 10).toString(),
  constValue10,
  // 'constValue11 || 12345' is literal type, but don't transform (instead transform 'constValue11')
  constValue11 || 12345,
  constValue12,
  // 'constValue1 ? constValue2 : constValue3' is literal type, but don't transform
  constValue1 ? constValue2 : constValue3,
  // writableValue1 is literal type, but don't transform unless \`unsafeHoistWritableValues\` is true
  writableValue1
);
export {
  constValue1,
  constValue2,
  constValue3,
  constValue4,
  constValue5,
  constValue6,
  constValue7,
  constValue8,
  constValue9,
};
setWritableValue1();
if (constValue1 && (writableValue1 || !constValue5)) {
  console.log('');
}

// Test code for print
console.log(
  -constValue3,
  -constValue1.toString(),
  constValue2.toString(),
  constValue3.toString(),
  constValue10.toString()
);

function setWritableValue1() {
  writableValue1 = !!Math.random();
}

// External values
console.log(
  ts.SyntaxKind.AnyKeyword,
  ts.versionMajorMinor,
  versionMajorMinor,
  vmm
);

console.log(
  mod.Hoge,
  (n as number) === mod.Hoge || (n as number) === mod.Piyo,
  Piyo,
  Foo,
  X
);

export const constObject = {
  a: 4,
  b: 'bar',
  c: false,
  d: null,
  e: undefined,
  f: 20n,
  g: -30n,
  h: {
    h1: constValue1,
    h2: -3.14,
    h3: {},
  },
} as const;
console.log(
  constObject.a,
  constObject.b,
  constObject.c,
  constObject.d,
  constObject.e,
  constObject.f,
  constObject.g,
  constObject.h,
  constObject.h.h1,
  constObject.h.h2,
  constObject.h.h3,
  //
  constObject.a.toString(),
  constObject.b.toString(),
  constObject.c.toString(),
  constObject.f.toString(),
  constObject.g.toString(),
  constObject.h.h1.toString(),
  constObject.h.h2.toString(),
  // element accesses are hoistable by default
  constObject['a'],
  constObject['d']
);

// don't transform here unless unsafeHoistAsExpresion is true
declare let o: object;
console.log((o as typeof constObject).a);
console.log((o as typeof constObject)['a']);
console.log((o as typeof constObject).h.h1);
console.log((o as typeof constObject).h['h1']);

const nonConstObject = {
  a: true,
  b: 1,
};
nonConstObject.a = false;
nonConstObject.b = 2;
// don't transform \`a\` unless \`unsafeHoistWritableValues\` is true
console.log(nonConstObject.a, nonConstObject.b);

interface WithReadonlyObject {
  p: number | null;
  readonly q: 'q';
  readonly r: {
    s: boolean;
    readonly t: 2;
  };
}
const partialConstObject: WithReadonlyObject = {
  p: 1,
  q: 'q',
  r: {
    s: false,
    t: 2,
  },
};
partialConstObject.p = null;
partialConstObject.r.s = true;
// don't transform \`p\` and \`r.s\` unless \`unsafeHoistWritableValues\` is true
console.log(
  partialConstObject.p,
  partialConstObject.q,
  partialConstObject.r.s,
  partialConstObject.r.t
);

const enum BarEnum {
  A = 1,
  B = 'hoge',
}
console.log(BarEnum.A, BarEnum.B);

enum BazEnum {
  C = 2,
  D = 'piyo',
}
console.log(BazEnum.C, BazEnum.D);
// element access
console.log(BazEnum['C'], BazEnum['D']);

// Type is enum literal, not actual literal type
const valueUsingEnumValue = BarEnum.A;
console.log(valueUsingEnumValue);
// Enum type (not enum literal) is not a constant
const valueTypedEnum: BarEnum =
  Math.floor(Math.random() * 2) >= 1 ? BarEnum.A : BarEnum.B;
console.log(valueTypedEnum);

// Element access with constant name
const name_a = 'a';
console.log(constObject[name_a]);
const uniqueSym = Symbol('aaa');
// Nested element access
const tempObjForElementAccess = {
  // prettier-ignore
  'o\\\\': 'a',
  [uniqueSym]: 'o\\\\',
  1: uniqueSym,
  r: 1,
} as const;
console.log(
  // prettier-ignore
  (constObject)[
    (tempObjForElementAccess)[
      (tempObjForElementAccess)[
        tempObjForElementAccess[tempObjForElementAccess.r]
      ]
    ]
  ]
);

interface TempObjForElementAccess2 {
  [\`true\`]: 1;
  1: \`'foo'\`;
  "'foo'": 'bar';
  bar: true;
}
declare const tempObjForElementAccess2: TempObjForElementAccess2;
console.log(
  // prettier-ignore
  (tempObjForElementAccess2)[
    (tempObjForElementAccess2)[
      tempObjForElementAccess2[tempObjForElementAccess2.true]
    ]
  ]
);

// Object initializer with computed name
const objWithComputedName = { [name_a]: 432 } as const;
console.log(objWithComputedName[name_a]);

(() => {
  const { a, b: b2, e = constValue3 } = constObject;
  console.log(a, b2, e);
})();

((x: number = constValue2) => {
  console.log(x);
})();

function fn2() {
  return 12345 as const;
}
console.log(fn2());
// with annotation
console.log(/*@__PURE__*/ fn2(), /*#__PURE__*/ fn2());

// don't transform spread element and parameter declarations
console.log([...Array<undefined>(5)].map((u, i) => (u == null ? i : 0)));
const fn1 = (...args: undefined[]) => args.length;
console.log(fn1(...Array<undefined>(5)));

// don't transform omitted expression
const tuple = [1, 2] as const;
const [, tuple2] = tuple;
console.log(tuple2);

// don't transform satisfies expression
tuple2 satisfies 2;
switch (tuple2) {
  case 2:
    break;
  default:
    tuple2 satisfies never;
    break;
}

// don't transform assignment
const record1: Record<string, true> = {};
record1.foo = true;
record1['bar'] = true;
// don't transform indexed access
console.log(record1.foo, record1.baz);

// do transform constant values in initializers
const value1 = constValue1;
const array1 = [constValue1, constValue2] as const;
const array2 = [constValue3, constValue4] as const satisfies ReadonlyArray<
  string | number
>;
const object1 = {
  x: constValue3,
  constValue4,
  y: mod.Hoge,
  z: BarEnum.B,
} satisfies Record<string, unknown>;
console.log(value1, array1, array2, object1);

// for \`as\` expression
const as_1 = [constValue1, constValue2] as number[]; // do transform
const as_2 = constObject.b as string; // do transform
const as_3 = [BarEnum.A as number, BarEnum.B as string].includes(2); // do transform
const as_4 = (constObject as { readonly b: 'bar' }).b; // don't transform unless unsafeHoistAsExpresion
console.log(as_1, as_2, as_3, as_4);

// for multiline expression
// e.g. \`as XXX\` requires to have an expression in the same line ('X as Y' is ok, 'X\\n as Y' is invalid)
console.log(
  constObject[
    // here
    'f'
  ] as unknown
);
function multilineTest() {
  return constObject[
    /* here */
    'a'
  ].toFixed(2);
}
console.log(multilineTest());

export {};
",
  ],
  "version": 3,
}
`;

exports[`loader transforming causes unchanged: generated source 1`] = `
"(()=>{"use strict";var e={d:(o,r)=>{for(var t in r)e.o(r,t)&&!e.o(o,t)&&Object.defineProperty(o,t,{enumerable:!0,get:r[t]})},o:(e,o)=>Object.prototype.hasOwnProperty.call(e,o),r:e=>{"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})}},o={};e.r(o),e.d(o,{Hoge:()=>t,Piyo:()=>l,X:()=>r,default:()=>a});const r=123,t=1,l=2,a=3;var d=exports;for(var n in o)d[n]=o[n];o.__esModule&&Object.defineProperty(d,"__esModule",{value:!0})})();
//# sourceMappingURL=index.js.map"
`;

exports[`loader transforming causes unchanged: generated source map 1`] = `
{
  "file": "index.js",
  "mappings": "mBACA,IAAIA,EAAsB,CCA1BA,EAAwB,CAACC,EAASC,KACjC,IAAI,IAAIC,KAAOD,EACXF,EAAoBI,EAAEF,EAAYC,KAASH,EAAoBI,EAAEH,EAASE,IAC5EE,OAAOC,eAAeL,EAASE,EAAK,CAAEI,YAAY,EAAMC,IAAKN,EAAWC,MCJ3EH,EAAwB,CAACS,EAAKC,IAAUL,OAAOM,UAAUC,eAAeC,KAAKJ,EAAKC,GCClFV,EAAyBC,IACH,oBAAXa,QAA0BA,OAAOC,aAC1CV,OAAOC,eAAeL,EAASa,OAAOC,YAAa,CAAEC,MAAO,WAE7DX,OAAOC,eAAeL,EAAS,aAAc,CAAEe,OAAO,M,iECLvD,MACA,EADiB,ICCJC,EAAO,EACPC,EAAO,EAEpB,EADY,E",
  "names": [
    "__webpack_require__",
    "exports",
    "definition",
    "key",
    "o",
    "Object",
    "defineProperty",
    "enumerable",
    "get",
    "obj",
    "prop",
    "prototype",
    "hasOwnProperty",
    "call",
    "Symbol",
    "toStringTag",
    "value",
    "Hoge",
    "Piyo",
  ],
  "sourceRoot": "",
  "sources": [
    "webpack://ts-const-value-transformer/webpack/bootstrap",
    "webpack://ts-const-value-transformer/webpack/runtime/define property getters",
    "webpack://ts-const-value-transformer/webpack/runtime/hasOwnProperty shorthand",
    "webpack://ts-const-value-transformer/webpack/runtime/make namespace object",
    "webpack://ts-const-value-transformer/./src/test-project/mod3.mts",
    "webpack://ts-const-value-transformer/./src/test-project/mod.mts",
  ],
  "sourcesContent": [
    "// The require scope
var __webpack_require__ = {};

",
    "// define getter functions for harmony exports
__webpack_require__.d = (exports, definition) => {
	for(var key in definition) {
		if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
			Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
		}
	}
};",
    "__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))",
    "// define __esModule on exports
__webpack_require__.r = (exports) => {
	if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
		Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
	}
	Object.defineProperty(exports, '__esModule', { value: true });
};",
    "const TheValue = 123;
export default TheValue;
",
    "import { Baz } from './mod2.mjs';
export const Hoge = 1;
export const Piyo = 2;
const Foo = 3;
export default Foo;
export { Baz as X };
",
  ],
  "version": 3,
}
`;
